--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Full Time Reservation</title>
 </head>
-<!-- Creando la barra de navegacion -->
-<header class="header">
-    <div class="logo">
-        <img src="img/Logo/logo.png" alt="Logo Full Time Reservation"></img>
-    </div>
-    <nav>
-        <ul class="nav-list">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Restaurantes</a></li>
-            <li><a href="#">Promociones</a></li>
-        </ul>
-    </nav>
-    <div class="list-btn">
-        <a href="#" class="btn"><button>Iniciar sesion</button></a>
-        <a href="#" class="btn"><button>Registrarse</button></a>
-    </div>
-</header>
-<!-- Terminando la barra de navegacion -->
+    <!-- Creando la barra de navegacion -->
+    <header class="header">
+        <div class="logo">
+            <img src="img/Logo/logo.png" alt="Logo Full Time Reservation"></img>
+        </div>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Restaurantes</a></li>
+                <li><a href="#">Promociones</a></li>
+            </ul>
+        </nav>
+        <div class="list-btn">
+            <a href="#" class="btn"><button>Iniciar sesion</button></a>
+            <a href="#" class="btn"><button>Registrarse</button></a>
+        </div>
+    </header>
+    <!-- Terminando la barra de navegacion -->
 <body>
+
     
 </body>
 <footer>
